--- a/settings.gradle
+++ b/settings.gradle
@@ -10,7 +10,8 @@ dependencyResolutionManagement {
     repositories {
         google()
         mavenCentral()
+        maven { url 'https://jitpack.io' }
     }
 }
-rootProject.name = "Ordering"
+rootProject.name = "ordering"
 include ':app'
