--- a/build.gradle
+++ b/build.gradle
@@ -15,8 +15,7 @@ buildscript {
 
 allprojects {
     repositories {
-//        google()
-        mavenCentral()
+//        google()mavenCentral()
         // Warning: this repository is going to shut down soon
     }
 }
