--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,9 @@
         <activity android:name="com.example.ordering.MainAdminActivity"/>
         <activity android:name="com.example.ordering.MainUserActivity" />
         <activity android:name="com.example.ordering.activities.LoginActivity"/>
+        <activity android:name="com.example.ordering.activities.OrderActivity"/>
         <activity android:name="com.example.ordering.activities.ItemActivity"/>
+        <activity android:name="com.example.ordering.activities.BillActivity"/>
         <activity android:name="com.example.ordering.activities.IntroActivity"
             android:exported="true">
             <intent-filter>
